# urx_learning

./: .nvim.lua  .pre-commit-config.yaml  CMakeLists.txt  README.md
etc/: Ur10Learning.in.yaml  mc_rtc.yaml
src/: CMakeLists.txt  LocalRobot.h  Ur10Learning.cpp  Ur10Learning.h  UrXLearning.cpp  UrXLearning.h  api.h
